--- a/style.css
+++ b/style.css
@@ -148,6 +148,23 @@ margin-right: auto;
 
 }
 
+.divisor {
+
+  height: 1.5px;
+  width: 100%;
+  background-color: #D8D8D8;
+}
+
+.dTop {
+
+  margin-bottom:1.125em;
+}
+
+.float {
+
+  float: left;
+}
+
 img {
   width: 100%;
   height: auto;
@@ -179,6 +196,13 @@ div.rightC img
 margin-top: 2.2em;
 
 }
+
+
+.break {
+
+  margin-right: 1em;
+  margin-left: 1em;
+}
 /*TYPOGRAPHy*/
 
 
@@ -208,6 +232,41 @@ h3 {
   font-size: 1.0625em;
   color: #84899E;
   line-height: 1em;
+}
+
+h4:after {
+    content: "\00a0";
+}
+
+
+h4 {
+
+font-family: "gt-w-r";
+font-size: 0.875em;
+color: #ADB6C3;
+line-height: 1em;
+
+}
+a.callToAction {
+   
+font-family: "gt-w-r";
+font-size: 1.5em;
+color: #212121;
+line-height: 1em;
+margin-left: auto;
+margin-right: auto;
+margin-top: 7em;
+display: block;
+
+}
+
+a.fLink {
+font-family: "gt-w-r";
+font-size: 0.875em;
+color: #ADB6C3;
+line-height: 1em;
+  text-decoration: none;
+
 }
 
 @media (max-width: 40em) {
